--- a/html/assign 10/index.html
+++ b/html/assign 10/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <header>
-        <h1>Anuj Jaiswal</h1>
+        <h1>deepak dangi</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
